Renamed variables and made some of them final